--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
 	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
+	<link rel="icon" href="favicon.ico">
 	<title>{{ page.title }}</title>
 </head>
 
