Add visit forum button functionality

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 					<img src="images/powerbot-logo.png" class="forum-logo" alt="Bootstrap">
 					<h2>Powerbot</h2>
 					<p>DunkPathMaker was released on Powerbot on October 20th.</p>
-					<p><a class="btn btn-primary btn-lg" disabled="disabled" href="http://powerbot.org/">Visit forum »</a></p>
+					<p><a class="btn btn-primary btn-lg" href="http://www.powerbot.org/community/topic/1106934-dunkpathmaker-create-your-paths-with-ease/?p=13508895">Visit forum »</a></p>
 				</div>
 			</div>
 			{{ content }}
