--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,19 +36,19 @@
 				<div class="col-lg-4">
 					<img src="images/osbot-logo.png" class="forum-logo-osbot" alt="OSBot forum logo">
 					<h2>OSBot</h2>
-					<p>Launched on OSBot on October 27th in the 2.07 update.</p>
+					<p>Launched on OSBot on October 27th 2013 in the 2.07 update.</p>
 					<p><a class="btn btn-primary btn-sm" href="http://osbot.org/forum/topic/22296-dunkpathmaker-create-your-paths-with-ease/">Visit forum »</a></p>
 				</div>
 				<div class="col-lg-4">
 					<img src="images/powerbot-logo.png" class="forum-logo" alt="Powerbot forum logo">
 					<h2>Powerbot</h2>
-					<p>DunkPathMaker was released on Powerbot on October 20th.</p>
+					<p>DunkPathMaker was released on Powerbot on October 20th 2013.</p>
 					<p><a class="btn btn-primary btn-sm" href="http://www.powerbot.org/community/topic/1106934-dunkpathmaker-create-your-paths-with-ease/?p=13508895">Visit forum »</a></p>
 				</div>
 				<div class="col-lg-4">
 					<img src="images/tribot-logo.png" class="forum-logo" alt="TRiBot forum logo">
 					<h2>TRiBot</h2>
-					<p>Launched along with OSBot October 27th.</p>
+					<p>Launched along with OSBot October 27th 2013.</p>
 					<p><a class="btn btn-primary btn-sm" href="https://tribot.org/forums/index.php?/topic/22131-dunkpathmaker-create-your-paths-with-ease/">Visit forum »</a></p>
 				</div>
 			</div>
