Update GA and insecure link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 	<meta name="description" content="DunkPathMaker : A useful tool for RuneScape bot scripters" />
 
-	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
 	<link rel="icon" href="favicon.ico">
 	<title>{{ page.title }}</title>
@@ -63,15 +63,14 @@
 		</footer>
 	</div>
 
-	<script type="text/javascript">
-	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-40680192-2"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'UA-40680192-2');
 	</script>
-	<script type="text/javascript">
-	try {
-		var pageTracker = _gat._getTracker("UA-40680192-4");
-		pageTracker._trackPageview();
-	} catch(err) {}
-	</script>
+
 </body>
 </html>
